src/test/ui/error-codes/E0033.stderr
error[E0423]: expected value, found trait `SomeTrait`
  --> $DIR/E0033.rs:16:33
   |
16 |     let trait_obj: &SomeTrait = SomeTrait;
   |                                 ^^^^^^^^^ not a value

error[E0038]: the trait `SomeTrait` cannot be made into an object
  --> $DIR/E0033.rs:16:20
   |
16 |     let trait_obj: &SomeTrait = SomeTrait;
   |                    ^^^^^^^^^^ the trait `SomeTrait` cannot be made into an object
   |
   = note: method `foo` has no receiver

error[E0033]: type `&SomeTrait` cannot be dereferenced
  --> $DIR/E0033.rs:21:9
   |
21 |     let &invalid = trait_obj;
   |         ^^^^^^^^ type `&SomeTrait` cannot be dereferenced

error: aborting due to 3 previous errors

